Добавлена разметка, стили и код виджета

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <p>
-    <img src="img/js.png">
-  </p>
-  <h1>Я задача №4 :)</h1>
+  <div class="container">
+  </div>
 </body>
 </html>
